# RuneguardTactics

./: .gitignore  CMakeLists.txt  Colors.h  CombatManager.cpp  CombatManager.h  CombatStructs.h  Debugtools.h  GameEnums.h  GameEvents.cpp  GameEvents.h  GameState.cpp  GameState.h  GameStructs.h  GameUI.cpp  GameUI.h  GridEnums.h  GridLogic.cpp  GridLogic.h  GridStructs.h  GridVisuals.cpp  GridVisuals.h  InputManager.cpp  InputManager.h  InputManager_Combat.cpp  InputManager_Combat.h  MissionManager.cpp  MissionManager.h  MissionStructs.h  Missions.cpp  Missions.h  README.md  Renderer.cpp  Renderer.h  Roster.cpp  Roster.h  RuneguardTactics.cpp  RuneguardTactics.sln  RuneguardTactics.vcxproj  RuneguardTactics.vcxproj.filters  Spawner.cpp  (+12 more)
Assets/Art/Tilesets/: DuskFerrets_Hideout.tsx
Assets/Art/UI/: T_Action_Border.aseprite  T_MissionBoard.aseprite
Assets/Maps/: DuskFerrets_Hideout_Entrance.json  DuskFerrets_Warehouse.tmx
Editor/: EditorUI.cpp  EditorUI.h
Encounters/DuskFerrets/: dusk_ferrets_hideout_entrance.json
Missions/DuskFerrets/: dusk_ferrets.json
Units/: UnitBase.cpp  UnitBase.h  UnitDefinitionTemplate.json  UnitFactory.cpp  UnitFactory.h
Units/Stats/: AP.cpp  AP.h  Damage.cpp  Damage.h  Defense.cpp  Defense.h  Healing.cpp  Healing.h  Health.cpp  Health.h  Movement.cpp  Movement.h  Range.cpp  Range.h  Stats.cpp  Stats.h  UnitDefinition.cpp  UnitDefinition.h  speed.cpp  speed.h
Units/UnitDatabase/: bandit_crossbow.json  bandit_daggers.json  knight.json
Widget/: Panel.cpp  Panel.h
